# Massar

./: .env.example  .gitignore  ARCHITECTURE.md  HISTORY.md  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test-results.txt
artifacts/evaluation/: confusion_matrix.csv  latency_results.json  metrics.json  results.json  test_case_inventory.json
docs/: api-contracts.md  architecture-mermaid.md  architecture.md  data-model.md  domain-model.md  evaluation-plan.md  evaluation_report.md  intake-engine.md  ml-strategy.md  rag-strategy.md
docs/decisions/: ADR-001-monorepo.md  ADR-002-service-boundaries.md  ADR-003-rules-before-ml.md  ADR-004-llm-abstraction.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
models/: registry.json
models/maturity/: sklearn-v0.1.0.metadata.json
rules/blockers/: rules-v0.1.0.yaml
rules/countries/: dz.yaml  ma.yaml  tn.yaml
rules/eligibility/: rules-v0.1.0.yaml
rules/maturity/: rules-v0.1.0.yaml
rules/probes/: tender_readiness-v0.1.0.yaml
rules/scoring/: weighted-rules-v0.1.0.yaml
scripts/: evaluate_maturity_model.py  generate_evaluation_report_data.py  generate_sector_kb.py  generate_synthetic_profiles.py  ingest_knowledge_base.py  reset_local_environment.sh  run_all_tests.sh  run_demo.py  run_evaluation.py  run_performance_benchmark.py  run_persona_tests.py  seed_database.py  startup_classifier_simulator.py  train_maturity_model.py
services/api_gateway/: Dockerfile  (+1 more)
shared/: __init__.py
(+219 files in other folders)
