[project]
name = "entrepreneur-orientation-engine"
version = "0.1.0"
description = "MVP monorepo for an Intelligent Entrepreneurial Orientation Engine."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "joblib>=1.4.0",
  "numpy>=1.26.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.0",
  "redis>=5.0.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.0",
  "structlog>=24.1.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*"]
namespaces = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "services"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ["frontend", "shared/database/migrations"]
